# Conclave

./: .env.example  .gitignore  DESIGN.md  Makefile  PROGRESS.md  README.md  SCRATCHPAD.md  docker-compose.ollama.yml  docker-compose.yml  pom.xml  spec.md
.github/workflows/: ci.yml
agents/: README.md  pyproject.toml
agents/deliberation/: __init__.py  graph.py  state.py
agents/deliberation/_proto/: __init__.py
agents/deliberation/clients/: __init__.py  baseline_client.py  graph_client.py
agents/deliberation/llm/: __init__.py  anthropic_provider.py  ollama_provider.py  openai_provider.py  provider.py
agents/deliberation/nodes/: __init__.py  baseliner.py  feature.py  graph_reasoner.py  judge.py
agents/deliberation/server/: __init__.py  entrypoint.py  service.py
agents/proto/: baseline.proto  deliberation.proto  graph.proto
agents/scripts/: gen_protos.sh
agents/tests/: conftest.py  test_anthropic_provider.py  test_baseline_client.py  test_baseliner_node.py  test_feature_node.py  test_graph_client.py  test_graph_e2e.py  test_graph_reasoner_node.py  test_grpc_server.py  test_judge_node.py  test_ollama_provider.py  test_openai_provider.py  test_provider_factory.py  test_provider_parse.py  test_state.py
baseline/: pom.xml
baseline/src/main/proto/: baseline.proto
baseline/src/main/resources/: application.yaml
benchmark/: capture.py  make_paper_data.py
benchmark/results/: fraud-serving.json  fraud-validation.json  security-serving.json
configs/fraud/: enriched-schema.avsc  schema.avsc
configs/security/: enriched-schema.avsc  schema.avsc
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: ContributingFactors.tsx  DecisionTable.tsx  FilterBar.tsx  JsonBlock.tsx  ScoreBadge.tsx  ScoreHistogram.tsx  VerdictMarkdown.tsx  VerdictPill.tsx
dashboard/src/components/ui/: Button.tsx  Card.tsx  Field.tsx
dashboard/src/hooks/: useDecisions.ts
dashboard/src/lib/: api.ts  types.ts  utils.ts
dashboard/src/pages/: DecisionDetailPage.tsx  DecisionsPage.tsx
docker/: agents.Dockerfile  baseline.Dockerfile  graph.Dockerfile  orchestrator.Dockerfile
docs/adr/: 0001-feature-spec-abstraction.md  0002-baseline-storage-and-embedding.md  0003-graph-templates-and-schema.md  0004-judge-llm-provider-factory.md  0005-decision-persistence-and-dlq.md  0006-audit-api-surface.md  0007-synthetic-data-generators.md  0008-compose-demo-harness.md  0009-dashboard-tech-choices.md
generators/: pom.xml
generators/src/main/resources/: logback.xml
graph/: pom.xml
graph/src/main/proto/: graph.proto
orchestrator/: pom.xml
paper/: README.md  conclave.bbl  conclave.tex  references.bib
paper/data/: numbers.tex
scripts/: _common.sh  dashboard.sh  down.sh  logs.sh  seed.sh  test.sh  up.sh
website/: index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.tsx  index.css
(+166 files in other folders)
