[project]
name = "conclave-deliberation"
version = "0.1.0"
description = "CONCLAVE M5 — LangGraph multi-agent deliberation orchestrator (Python sidecar)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Abhishek Aditya" }]

# Runtime deps — pinned conservatively. Anthropic SDK + LangGraph + Ollama
# wrapper + gRPC. We deliberately avoid the optional `claude-agent-sdk`
# wrapper here: the judge is a single structured-output call, for which the
# bare `anthropic` client with tool-use is simpler and equally counts against
# the Max-20x Agent SDK credit pool because billing is endpoint-driven, not
# wrapper-driven (see ADR-004).
dependencies = [
    "anthropic>=0.40.0",
    "langgraph>=0.2.50",
    "langchain-core>=0.3.20",
    "langchain-ollama>=0.2.0",
    "grpcio>=1.66.0",
    "grpcio-tools>=1.66.0",
    "protobuf>=5.28.0",
    "pydantic>=2.9.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "respx>=0.21.0",
]

[project.scripts]
conclave-deliberation = "deliberation.server.entrypoint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deliberation"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=deliberation",
    "--cov-report=term-missing",
    "--cov-report=html",
    # Generated proto modules don't carry meaningful coverage — exclude them
    # the same way the Java side excludes io.conclave.{baseline,graph}.proto.**
    "--cov-config=pyproject.toml",
]
markers = [
    "live: end-to-end test requiring a real Ollama or Anthropic backend (skipped by default)",
]

[tool.coverage.run]
source = ["deliberation"]
omit = [
    "deliberation/_proto/*",
    "deliberation/server/entrypoint.py",  # thin main(); skipped from coverage gate
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
# Mirror the Java JaCoCo 80% line target; pytest --cov-fail-under uses this.
fail_under = 80
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT"]
ignore = ["B008"]  # FastAPI/protobuf-style default args are fine

[tool.ruff.lint.per-file-ignores]
"deliberation/_proto/*" = ["E", "F", "I", "B", "UP"]
# Tests favor readability over line-length nits — JudgeInput(...) constructions
# and arrange/act/assert blocks routinely run a hair past 100 chars.
"tests/*" = ["B011", "E501", "SIM117", "PT018"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["deliberation/_proto/.*"]
